--- a/mysql.conf
+++ b/mysql.conf
@@ -24,7 +24,17 @@ output{
 	hosts=>["127.0.0.1:9200"]
 #索引
 index=>"blog"
+
 #_id
 document_id=>"%{id}"
 	}
+  elasticsearch{
+  #es host:port
+  hosts=>["127.0.0.1:9200"]
+#索引
+index=>"blog1"
+
+#_id
+document_id=>"%{id}"
+  }
 }
